# benchnav

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
environments/: env.py  slip_model.py  utils.py
notebooks/: tutorial_no1_environments.ipynb  tutorial_no2_prediction_models.ipynb  tutorial_no3_1_astar_dwa.ipynb  tutorial_no3_2_cl_rrt.ipynb  tutorial_no3_2_mppi.ipynb  tutorial_no3_3_mppi.ipynb
scripts/: download_dataset_and_model.sh  generate_terrain_dataset.py  test_mppi.py  test_slip_regressors.py  test_terrain_classifier.py  train_slip_regressors.py  train_terrain_classifier.py
src/data/: dataset_generator.py  slip_models_generator.py  terrain_dataset.py  utils.py
src/environments/: env.py  grid_map.py  slip_model.py  terrain_properties.py  utils.py
src/followers/: pure_pursuit.py
src/gymnasium_env/: env.py
src/gymnasium_wrappers/: planetary_env.py
src/planner/: mppi.py  objectives.py
src/planners/global_planners/: astar.py  cl_rrtstar.py  rrtstar.py
src/planners/local_planners/: dubins.py  dwa.py  mppi.py  objectives.py  pure_pursuit.py
src/prediction_models/slip_regressors/: gpr.py
src/robot_models/: unicycle_model.py
src/simulator/: planetary_env.py  robot_model.py  traversability_model.py
src/utils/: utils.py
test/: test_astar_dwa.py  test_cl_rrt.py  test_cl_rrtstar.py  test_env.py  test_gpr.py  test_mppi.py  test_rrt_dwa.py  test_rrtstar.py  test_slip_model.py
(+13 files in other folders)
