[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "benchnav"
version = "0.1.0"
description = "path/motion planning benchmark for planetary exploration rovers"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.8.2",
    "seaborn==0.13.2",
    "imageio==2.34.0",
    "fire==0.5.0",
    "numpy==1.26.2",
    "opensimplex==0.4.5",
    "gymnasium==0.29.1",
    "torch==2.00",
    "torchvision==0.15.1",
    "gpytorch==1.11",
    "segmentation-models-pytorch==0.3.3",
    "tensorboard==2.16.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pysen",
    "black",
    "flake8",
    "isort",
    "mypy",
]

